<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_normal" >

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:scrollbars="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="15.0dip" >

                <EditText
                    android:id="@+id/et_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8.0dip"
                    android:background="@drawable/edittext_bg_selector"
                    android:hint="@string/login_hit_userid"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_text" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8.0dip"
                    android:background="@drawable/edittext_bg_selector"
                    android:hint="@string/login_hit_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_text" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8.0dip"
                    android:clickable="true"
                    android:text="@string/forget_password"
                    android:textSize="@dimen/tips_text" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_login"
            style="@style/FullButton"
            android:layout_alignParentBottom="true"
            android:layout_margin="10.0dip"
            android:text="@string/login" />
    </LinearLayout>

</RelativeLayout>