<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_normal"
    android:orientation="vertical"
    android:paddingLeft="10.0dip"
    android:paddingRight="10.0dip" >

    <TextView
        android:id="@+id/tv_class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:text="@string/class_name"
        android:textColor="@color/normal_text"
        android:textSize="@dimen/big_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/class_name"
        android:textColor="@color/tips_text"
        android:textSize="@dimen/normal_text" />

    <View style="@style/ListDivider" />

    <RelativeLayout
        android:id="@+id/layout_user_list"
        style="@style/ListItem"
        android:padding="0.0dip" >

        <TextView
            android:id="@+id/tv_user_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/select_recv_user"
            android:textColor="@color/tips_text"
            android:textSize="@dimen/normal_text" />

        <ImageView style="@style/ListItemArrow" />
    </RelativeLayout>

    <View style="@style/ListDivider" />

    <EditText
        android:id="@+id/et_daily_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/edittext_bg_selector"
        android:ems="10"
        android:hint="@string/input_message_content"
        android:minLines="5"
        android:textSize="@dimen/edit_text" />

</LinearLayout>